--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -8,20 +8,20 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
     <!---->
-    <title>Creative Space</title>
+    <title>Home</title>
     <!-- -->
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
+    <!--<link href="album.css" rel="stylesheet">-->
   </head>
 
   <body>
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">Monkey Code</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,24 +29,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="http://twitter.com/CodevEmmanuel">Twitter <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{%url 'allblogs'%}">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'allblogs'%}">Blog</a>
+              <a class="nav-link" href="https://github.com/emmanuelcodev">GitHub</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% static 'resume.pdf'%}">Resume</a>
+              <a class="nav-link" href="https://www.linkedin.com/in/emmanuel-cocom-8834a1117/">LinkedIn</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="http://twitter.com/CodevEmmanuel">Twitter <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -57,10 +49,10 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Emmanuel Codev</h1>
+          <h1 class="jumbotron-heading">Emmanuel Codes</h1>
           <p class="lead text-muted">Python enthusiast changing the world one program at a time.</p>
           <p>
-            <a href="mailto:mo@gmail.com" class="btn btn-primary my-2">Email Me</a>
+            <a href="mailto:emmanuelcodes7@gmail.com" class="btn btn-primary my-2">Email Me</a>
             <!--<a href="#" class="btn btn-secondary my-2">Secondary action</a>-->
           </p>
           <img src="{% static 'nick.jpg' %}" alt="" height="300" width="300"/>
@@ -77,13 +69,6 @@
                 <img class="card-img-top" src ={{ job.image.url}} alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">{{job.summary}}</p>
-                  <!--<div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>-->
                 </div>
               </div>
             </div>
