added certifications page, made it responsive, basic outline ready, and todos. Also added space in work samples page to fix alignment issues added br

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -98,7 +98,7 @@
       <h2>Certificates</h2>
       <p>Check out the Certificates I've earned from Udemy, linkedin and Coursera. Content include Python, Django, Web Developement, MYSQL, Statistics, Webscrapping, Regular Expressions, Objective Oriented Programming and Pandas.</p>
       <!--<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>-->
-      <p><a class="btn btn-secondary" href="" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="{% url 'certifications_homepage' %}" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="rounded-circle" src="/static/code_icon1.png" alt="Generic placeholder image" width="140" height="140">
