--- a/work_samples/templates/work_samples/work_samples.html
+++ b/work_samples/templates/work_samples/work_samples.html
@@ -3,7 +3,14 @@
 
 
 {% block content%}
+<div class="temp_content">
 
+
+<br />
+<br />
+<br />
+</div>
+<div class="container">
 
 
 <div class="row pt-2">
@@ -36,9 +43,9 @@
 
   </div>
 
-  <div id = 'small_cases' class="col-8 pt-2">
+  <div id = 'small_cases' class="col-8 pt-2" style="margin-top: 20px;">
 
-  <div class="temp_hidden nav">
+  <div class="temp_hidden nav" style="margin-top: 20px;">
     <br />
 
     <ul>
@@ -92,6 +99,7 @@
 
 
   </div>
+</div>
 </div>
 
 
