--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -91,7 +91,7 @@
       <h2>Testimonials</h2>
       <!--<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>-->
       <p>This is sample text. Nothing more. Real Testimonials comming some time in the future. id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-      <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary"  href="{%  url 'testimonials_home'%}" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="rounded-circle" src="/static/certificate.png" alt="Generic placeholder image" width="140" height="140">
