added biography app to the project. Media responsive. No database required.

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -31,7 +31,7 @@
         <div class="carousel-caption">
           <h1>Biography.</h1>
           <p>Python enthusiast changing the world one program at a time.quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <p><a class="btn btn-lg btn-primary" href="{% url 'biography_home'%}" role="button">Learn more</a></p>
         </div>
       </div>
     </div>
