--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -105,7 +105,7 @@
       <h2>100DaysOfCode</h2>
       <!--<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
       <p>One Hundred Days of coding personal projects. I am currently in my second round. Come see what I like to tinker with on my personal time. Fusce dapibus, tellus tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="{% url 'hundred_days_home'%}" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 </div>
