--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -98,14 +98,14 @@
       <h2>Certificates</h2>
       <p>Check out the Certificates I've earned from Udemy, linkedin and Coursera. Content include Python, Django, Web Developement, MYSQL, Statistics, Webscrapping, Regular Expressions, Objective Oriented Programming and Pandas.</p>
       <!--<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>-->
-      <p><a class="btn btn-secondary" href="{% url 'certifications_homepage' %}" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="{% url 'certifications_homepage' 1%}" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="rounded-circle" src="/static/code_icon1.png" alt="Generic placeholder image" width="140" height="140">
       <h2>100DaysOfCode</h2>
       <!--<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
       <p>One Hundred Days of coding personal projects. I am currently in my second round. Come see what I like to tinker with on my personal time. Fusce dapibus, tellus tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-secondary" href="{% url 'hundred_days_home'%}" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-secondary" href="{% url 'hundred_days_home' 1%}" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 </div>
