--- a/hundred_days/templates/hundred_days/hundred_days_home.html
+++ b/hundred_days/templates/hundred_days/hundred_days_home.html
@@ -87,6 +87,28 @@
 
 
 
+      <div class = 'hundred_days_navigation'>
+      <p id  = 'nav_num'>
+        {% if previous_page %}
+        <a class="prev_next_pages" href="{{previous_page}}">&#x21E6; Previous</a>
+        {%else%}
+        &#x21E6; Previous
+        {% endif%}
+
+
+        <a class = 'page_numbers' href="{{current_page}}">{{current_page}}</a>
+        <a href="{{page2}}">{{page2}}</a>
+        <a href="{{page3}}">{{page3}}</a>
+
+        ...
+        <a href="{{last_page}}">{{last_page}}</a>
+
+        <a href="{{page2}}">Next &#x21E8;</a> </p>
+      </div>
+
+
+
+
     </div>
 
 
