--- a/portfolio/static/css/certificates.css
+++ b/portfolio/static/css/certificates.css
@@ -15,6 +15,16 @@ div.temp_hidden{
 }
 }
 
-  div.temp_hidden{
-    display: none;
+div.temp_hidden{
+  display: none;
+}
+
+div.certificate_navigation{
+  color:red;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a{
+  color:red;
   }
